--- a/app/view/admin/role/index.html
+++ b/app/view/admin/role/index.html
@@ -6,11 +6,11 @@
     <div class="row">
         <div class="col-sm-2">
             <%- include ../public/page_aside.html %>
-			
-          
+
+
         </div>
         <div class="col-sm-10">
-           
+
             <div class="panel panel-default">
                 <div class="panel-heading">
                     搜索
@@ -34,46 +34,31 @@
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
-                    <tr class="th">
-                        <th>编号</th>
-                        <th>图标</th>
-                        <th>名称</th>
-                        <th>价格</th>
-                        <th>邮费</th>
-                       
-                        <th class="text-center">操作</th>
-                    </tr>
+                        <tr class="th">
+                            <th>角色名称</th>
+                            <th>描述</th>
+                            <th>增加时间</th>
+                            <th class="text-center">操作</th>
+                        </tr>
                     </thead>
                     <tbody>
-
-                    <tr>
-                        <td>1</td>
-                        <td>图标</td>
-                        <td>背包1111111</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-					   <tr>
-                        <td>2</td>
-                        <td>图标</td>
-                        <td>thinpad笔记本电脑</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-					   <tr>
-                        <td>3</td>
-                        <td>图标</td>
-                        <td>iphone7</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-
+                        <% for(var i = 0;i<list.length;i++){%>
+                        <tr>
+                            <td>
+                                <%= list[i].title %>
+                            </td>
+                            <td>
+                                <%= list[i].description %>
+                            </td>
+                            <td>
+                                <%= list[i].add_time %>
+                            </td>
+                            <td class="text-center">
+                                <a href="/admin/role/edit?id=<%= list[i]._id %>">修改</a>
+                                <a href="/admin/delete?model=Role&id=<%= list[i]._id %>">删除</a>
+                            </td>
+                        </tr>
+                        <%}%>
                     </tbody>
                 </table>
             </div>
@@ -83,4 +68,5 @@
 </div>
 
 </body>
+
 </html>
