--- a/app/view/admin/public/page_aside.html
+++ b/app/view/admin/public/page_aside.html
@@ -14,7 +14,7 @@
         <ul>
             <li  class="list-group-item"> <a href="/admin/role"> 角色列表</a></li>
             
-            <li class="list-group-item"> <a href="/admin/manager/add" >增加角色</a></li>
+            <li class="list-group-item"> <a href="/admin/role/add" >增加角色</a></li>
         </ul>
     </li>
     <li>
@@ -27,7 +27,7 @@
         </ul>
     </li>
     
-    <li>
+    <!-- <li>
         <h4>轮播图管理</h4>
         
         <ul>
@@ -35,6 +35,6 @@
             
             <li class="list-group-item"> <a href="/add">轮播图商品</a></li>
         </ul>
-    </li>
+    </li> -->
     
 </ul>
