--- a/app/view/admin/access/index.html
+++ b/app/view/admin/access/index.html
@@ -6,11 +6,11 @@
     <div class="row">
         <div class="col-sm-2">
             <%- include ../public/page_aside.html %>
-			
-          
+
+
         </div>
         <div class="col-sm-10">
-           
+
             <div class="panel panel-default">
                 <div class="panel-heading">
                     搜索
@@ -34,46 +34,86 @@
             <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
-                    <tr class="th">
-                        <th>编号</th>
-                        <th>图标</th>
-                        <th>名称</th>
-                        <th>价格</th>
-                        <th>邮费</th>
-                       
-                        <th class="text-center">操作</th>
-                    </tr>
+                        <tr class="th">
+                            <th>模块名称</th>
+                            <th>节点类型</th>
+                            <th>操作名称</th>
+                            <th>操作地址</th>
+                            <th>排序</th>
+                            <th>描述</th>
+
+                            <th class="text-center">操作</th>
+                        </tr>
                     </thead>
                     <tbody>
+                        <%for(var i=0;i<list.length;i++){%>
+                        <tr style="background-color: #428bca;color:#fff;">
+                            <td>
+                                <%=list[i].module_name%>
+                            </td>
+                            <td>
+                                <%if(list[i].type==1){%>
+                                模块
+                                <%}else if(list[i].type==2){%>
+                                菜单
+                                <%}else{%>
+                                操作
+                                <%}%>
+                            </td>
+                            <td>
+                                <%=list[i].action_name%>
+                            </td>
+                            <td>
+                                <%=list[i].url%>
+                            </td>
+                            <td>
+                                <%=list[i].sort%>
+                            </td>
 
-                    <tr>
-                        <td>1</td>
-                        <td>图标</td>
-                        <td>背包1111111</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-					   <tr>
-                        <td>2</td>
-                        <td>图标</td>
-                        <td>thinpad笔记本电脑</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-					   <tr>
-                        <td>3</td>
-                        <td>图标</td>
-                        <td>iphone7</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
+                            <td>
+                                <%=list[i].description%>
+                            </td>
+                            <td class="text-center">
+                                <a href="/admin/access/edit?id=<%= list[i]._id %>">修改</a>
+                            </td>
+                        </tr>
+                        <%for(var j=0;j<list[i].items.length;j++){%>
+                        <tr>
+                            <td>----
+                                <%=list[i].items[j].module_name%>
+                            </td>
+                            <td>
+                                <%if(list[i].items[j].type==1){%>
+                                模块
+                                <%}else if(list[i].items[j].type==2){%>
+                                菜单
+                                <%}else{%>
+                                操作
+                                <%}%>
+                            </td>
+                            <td>
+                                <%=list[i].items[j].action_name%>
+                            </td>
 
+                            <td>
+                                <%=list[i].items[j].url%>
+                            </td>
+                            <td>
+                                <%=list[i].items[j].sort%>
+                            </td>
+
+                            <td>
+                                <%=list[i].items[j].description%>
+                            </td>
+
+                            <td class="text-center">
+                                <a href="/admin/access/edit?id=<%= list[i].items[j]._id %>">修改</a>
+                                <a href="/admin/delete?model=Access&id=<%=list[i].items[j]._id%>">删除</a>
+                            </td>
+                        </tr>
+
+                        <%}%>
+                        <%}%>
                     </tbody>
                 </table>
             </div>
@@ -83,4 +123,5 @@
 </div>
 
 </body>
+
 </html>
