--- a/app/view/admin/manager/add.html
+++ b/app/view/admin/manager/add.html
@@ -12,31 +12,30 @@
           
             <div class="panel panel-default">              
 			    <div class="panel-heading">
-                  增加商品
+                  增加管理员
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive input-form">
-                        <form action="/doAdd" method="post">
+                        <form action="/admin/manager/doAdd" method="post">
                             <ul>
-                                <li>  商品名称: <input type="text" name="title"/></li>
-
-                                <li>  商品图片: <input type="file" name="pic"/></li>
-                                <li>  商品价格: <input type="text" name="price"/></li>
-                                <li>  商品邮费: <input type="text" name="fee"/></li>
-
+                                    <input type="hidden" name="_csrf" value="<%= csrf %>">
+                                <li>  管理员名称: <input type="text" name="username"/></li>
+                                <li>  管理员密码: <input type="text" name="password"/></li>
+                                <li>  管理员手机号: <input type="text" name="mobile"/></li>
+                                <li>  管理员邮箱: <input type="text" name="email"/></li>
                                 <li>
-                                    商品描述:
-                                    <textarea name="description" id="" cols="60" rows="8"></textarea>
+                                    管理员角色:
+                                    <select name="role_id" id="role_id">
+                                        <%for(var i =0;i<roelResult.length;i++ ){%>
+                                         <option value="<%= roelResult[i]._id %>"><%= roelResult[i].title %></option>
+                                        <%}%>
+                                    </select>
                                 </li>
-
                                 <li>
                                     <br/>
                                     <button type="submit" class="btn btn-default">提交</button>
                                 </li>
-
                             </ul>
-
-
                         </form>
                     </div>
                 </div>
