--- a/app/view/admin/manager/edit.html
+++ b/app/view/admin/manager/edit.html
@@ -8,34 +8,43 @@
             <%- include ../public/page_aside.html %>
         </div>
         <div class="col-sm-10">
-          
-            <div class="panel panel-default">              
-			    <div class="panel-heading">
-                  增加商品
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    编辑管理员
                 </div>
                 <div class="panel-body">
                     <div class="table-responsive input-form">
-                        <form action="/doAdd" method="post">
+                        <form action="/admin/manager/doEdit" method="post">
                             <ul>
-                                <li>  商品名称: <input type="text" name="title"/></li>
-
-                                <li>  商品图片: <input type="file" name="pic"/></li>
-                                <li>  商品价格: <input type="text" name="price"/></li>
-                                <li>  商品邮费: <input type="text" name="fee"/></li>
-
+                                <input type="hidden" name="_csrf" value="<%= csrf %>">
+                                <input type="hidden" name="id" value="<%= adminResult._id %>">
+                                <li> 管理员名称: <input readonly type="text" name="username" value="<%= adminResult.username %>" /></li>
+                                <li> 管理员密码: <input type="text" name="password" /></li>
+                                <li> 管理员手机号: <input type="text" name="mobile" value="<%= adminResult.mobile %>" /></li>
+                                <li> 管理员邮箱: <input type="text" name="email" value="<%= adminResult.email %>" /></li>
                                 <li>
-                                    商品描述:
-                                    <textarea name="description" id="" cols="60" rows="8"></textarea>
+                                    管理员角色:
+                                    <select name="role_id" id="role_id">
+                                        <%for(var i =0;i<roleResult.length;i++ ){%>
+                                        <!-- 选中的角色 -->
+                                        <% if(roleResult[i]._id.toString() == adminResult.role_id.toString() ){%>
+                                        <option value="<%= roleResult[i]._id %>" selected>
+                                            <%= roleResult[i].title %>
+                                        </option>
+                                        <% }else {%>
+                                        <option value="<%= roleResult[i]._id %>">
+                                            <%= roleResult[i].title %>
+                                        </option>
+                                        <% } %>
+                                        <%}%>
+                                    </select>
                                 </li>
-
                                 <li>
-                                    <br/>
+                                    <br />
                                     <button type="submit" class="btn btn-default">提交</button>
                                 </li>
-
                             </ul>
-
-
                         </form>
                     </div>
                 </div>
@@ -48,4 +57,5 @@
 </div>
 
 </body>
+
 </html>
