--- a/app/view/admin/manager/index.html
+++ b/app/view/admin/manager/index.html
@@ -32,45 +32,34 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr class="th">
-                            <th>编号</th>
-                            <th>图标</th>
-                            <th>名称</th>
-                            <th>价格</th>
-                            <th>邮费</th>
-
+                            <th>管理员名称</th>
+                            <th>管理员角色</th>
+                            <th>管理员电话</th>
+                            <th>管理员邮箱</th>
                             <th class="text-center">操作</th>
                         </tr>
                     </thead>
                     <tbody>
-
+                        <%for(var i =0;i<list.length;i++ ){%>
                         <tr>
-                            <td>1</td>
-                            <td>图标</td>
-                            <td>背包1111111</td>
-                            <td>20元</td>
-                            <td>10元</td>
-
-                            <td class="text-center">修改 删除</td>
+                            <td>
+                                <%= list[i].username%>
+                            </td>
+                            <td>
+                                <%= list[i].role[0].title%>
+                            </td>
+                            <td>
+                                <%= list[i].mobile%>
+                            </td>
+                            <td>
+                                <%= list[i].email%>
+                            </td>
+                            <td class="text-center">
+                                <a href="/admin/manager/edit?id=<%= list[i]._id %>">修改</a>
+                                <a href="/admin/delete?model=Admin&id=<%= list[i]._id %>">删除</a>
+                            </td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>图标</td>
-                            <td>thinpad笔记本电脑</td>
-                            <td>20元</td>
-                            <td>10元</td>
-
-                            <td class="text-center">修改 删除</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>图标</td>
-                            <td>iphone7</td>
-                            <td>20元</td>
-                            <td>10元</td>
-
-                            <td class="text-center">修改 删除</td>
-                        </tr>
-
+                        <%}%>
                     </tbody>
                 </table>
             </div>
@@ -80,4 +69,5 @@
 </div>
 
 </body>
+
 </html>
