--- a/app/view/admin/public/page_aside.html
+++ b/app/view/admin/public/page_aside.html
@@ -18,12 +18,12 @@
         </ul>
     </li>
     <li>
-        <h4>商品管理</h4>
+        <h4>权限管理</h4>
         
         <ul>
-            <li  class="list-group-item"> <a href="/"> 商品列表</a></li>
+            <li  class="list-group-item"> <a href="/admin/access"> 权限列表</a></li>
             
-            <li class="list-group-item"> <a href="/add">增加商品</a></li>
+            <li class="list-group-item"> <a href="/admin/access/add">增加权限</a></li>
         </ul>
     </li>
     
