--- a/app/view/admin/role/index.html
+++ b/app/view/admin/role/index.html
@@ -54,6 +54,7 @@
                                 <%= list[i].add_time %>
                             </td>
                             <td class="text-center">
+                                    <a href="/admin/role/auth?id=<%=list[i]._id%>">授权</a>
                                 <a href="/admin/role/edit?id=<%= list[i]._id %>">修改</a>
                                 <a href="/admin/delete?model=Role&id=<%= list[i]._id %>">删除</a>
                             </td>
