公共改变状态

--- a/app/view/admin/manager/index.html
+++ b/app/view/admin/manager/index.html
@@ -33,9 +33,10 @@
                     <thead>
                         <tr class="th">
                             <th>管理员名称</th>
-                            <th>管理员角色</th>
                             <th>管理员电话</th>
                             <th>管理员邮箱</th>
+                            <th>管理员角色</th>
+                            <th>状态</th>
                             <th class="text-center">操作</th>
                         </tr>
                     </thead>
@@ -46,13 +47,20 @@
                                 <%= list[i].username%>
                             </td>
                             <td>
-                                <%= list[i].role[0].title%>
-                            </td>
-                            <td>
                                 <%= list[i].mobile%>
                             </td>
                             <td>
                                 <%= list[i].email%>
+                            </td>
+                            <td>
+                                <%= list[i].role[0].title%>
+                            </td>
+                            <td>
+                                <%if(list[i].status == 1){%>
+                                    <img src="/public/admin/images/yes.gif" onclick="app.changeStatus(this,'Admin','status','<%=list[i]._id%>')" alt="">
+                                <%}else{%>
+                                    <img src="/public/admin/images/no.gif" onclick="app.changeStatus(this,'Admin','status','<%=list[i]._id%>')" alt="">
+                                <%}%>
                             </td>
                             <td class="text-center">
                                 <a href="/admin/manager/edit?id=<%= list[i]._id %>">修改</a>
