--- a/app/view/admin/focus/add.html
+++ b/app/view/admin/focus/add.html
@@ -13,15 +13,22 @@
                 <div class="panel-body">
                     <div class="table-responsive input-form">
                         <form action="/admin/focus/doAdd?_csrf=<%= csrf %>" method="post" enctype="multipart/form-data">
-                            <ul>
-             
-                                <li> 轮播图名称: <input type="text" name="username" /></li>
-                               
-                                <li>
-                                    图片描述:
-                                    <textarea name="description" id="" cols="60" rows="8"></textarea>
+                            <ul>                                
+                                <li>  分　　类: 
+                                    <select name="type" id="type">
+                                        <option value="1">网站</option>
+                                        <option value="2">APP</option>
+                                        <option value="3">小程序</option>
+                                    </select>
                                 </li>
-                                <li> 轮播图: <input type="file" name="focus" /></li>
+                                <li>名称: <input type="text" name="title" /></li>
+                                <li>跳转地址: <input type="text" name="link" /></li>
+                                <li>轮播图: <input type="file" name="focus_img" /></li>
+                                <li>排序: <input type="text" name="sort" /></li>
+                                <li>状态: 
+                                    <input type="radio" name="status" checked value="1" id="a"/><label for="a">显示</label>
+                                    <input type="radio" name="status" checked value="0" id="b"/><label for="b">隐藏</label>
+                                </li>
                                 <li>
                                     <br />
                                     <button type="submit" class="btn btn-default">提交</button>
