--- a/app/view/admin/focus/index.html
+++ b/app/view/admin/focus/index.html
@@ -32,16 +32,54 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr class="th">
-                            <th>管理员名称</th>
-                            <th>管理员电话</th>
-                            <th>管理员邮箱</th>
-                            <th>管理员角色</th>
+                            <th>轮播图名称</th>
+                            <th>分类</th>
+                            <th>图片</th>
+                            <th>跳转地址</th>
+                            <th>排序</th>
                             <th>状态</th>
                             <th class="text-center">操作</th>
                         </tr>
                     </thead>
                     <tbody>
-                     
+                        <% for(var i = 0;i<list.length;i++){%>
+                        <tr>
+                            <td>
+                                <%= list[i].title %>
+                            </td>
+                            <td>
+                                <%if(list[i].type==1){%>
+                                网站
+                                <%}else if(list[i].type==2){%>
+                                App
+                                <%}else if(list[i].type==3){%>
+                                小程序
+                                <%}else {%>
+                                未知类型
+                                <%}%>
+                            </td>
+                            <td>
+                                <img style="max-width: 200px;height:auto;" class="pic" src=" <%= list[i].focus_img %>"
+                                    alt="">
+                            </td>
+                            <td>
+                                <%= list[i].link %>
+                            </td>
+                            <td class="text-center"><span onclick="app.editNum(this,'Focus','sort','<%=list[i]._id%>')"><%=list[i].sort%></span></td>
+                            <td class="text-center">
+                                <%if(list[i].status==1){%>
+                                <img src="/public/admin/images/yes.gif" onclick="app.changeStatus(this,'Focus','status','<%=list[i]._id%>')" />
+                                <%}else{%>
+                                <img src="/public/admin/images/no.gif" onclick="app.changeStatus(this,'Focus','status','<%=list[i]._id%>')" />
+                                <%}%>
+                            </td>
+                            <td class="text-center">
+
+                                <a href="/admin/focus/edit?id=<%= list[i]._id %>">修改</a>
+                                <a class="delete" href="/admin/delete?model=Focus&id=<%= list[i]._id %>">删除</a>
+                            </td>
+                        </tr>
+                        <%}%>
                     </tbody>
                 </table>
             </div>
