--- a/app/view/admin/goods/index.html
+++ b/app/view/admin/goods/index.html
@@ -6,6 +6,18 @@
                         <a href="/admin/goods/add" class="btn btn-primary">增加商品</a>
                     </div>
                     <div class="panel-body">
+                        <form role="form" class="form-inline" method="get" action="/admin/goods">
+                            <div class="form-group">
+                                <label for="name">输入关键词</label>
+                                <input type="text" class="form-control" value="<%=keyword%>" id="name" name="keyword" placeholder="请输入名称">
+                            </div>
+                
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-default">开始搜索</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="panel-body">
             <!--
                 列表展示
             -->
